[tool.poetry]
name = "airpyano-sounds-steinway"
version = "0.1.0"
description = ""
authors = ["Matteo Angeloni <mattange@gmail.com>"]
readme = "README.md"
packages = [{include = "airpyano", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
